# paip_server

./: .env.example  .gitignore  .sops.yaml  Dockerfile  LICENSE  PROTOCOL.md  README.md  docker-compose.yaml  pyproject.toml
config/: paip.yaml  secrets.example.yaml
src/paip/: __init__.py  config.py  main.py  models.py  plugin_interface.py  server.py  tokens.py
src/paip/plugins/: __init__.py  mock.py
tests/: __init__.py
